force-app/main/default/objects/DD_Census__c/DD_Census__c.object-meta.xml
<CustomObject>
    <description>Employee census data for group quoting. Uploaded per employee.</description>
    <label>Census Record</label>
    <nameField><displayFormat>CEN-{000000}</displayFormat><label>Census ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Census Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>