force-app/main/default/objects/DD_Census__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <type>Text</type>
    <length>255</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Employee full name</description>
</CustomField>