force-app/main/default/objects/DD_Census__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>M</fullName><default>false</default><label>M</label></value><value><fullName>F</fullName><default>false</default><label>F</label></value></valueSetDefinition></valueSet>
    <description>Employee gender</description>
</CustomField>