force-app/main/default/objects/DD_Census__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
    <description>For waiting period calculation</description>
</CustomField>