force-app/main/default/objects/DD_Census__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Waived</fullName><default>false</default><label>Waived</label></value><value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value></valueSetDefinition></valueSet>
    <description>Enrollment status</description>
</CustomField>