force-app/main/default/objects/DD_Census__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>ZIP Code</label>
    <type>Text</type>
    <length>10</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>For area-based rating</description>
</CustomField>