force-app/main/default/objects/DD_Census__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Employee_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Enrollment_Tier__c</columns>
    <columns>Status__c</columns>
    <columns>Hire_Date__c</columns>
</ListView>